--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 
-
-@import 'ngx-toastr/toastr';
+@use 'bootstrap/scss/bootstrap';
+@use 'ngx-toastr/toastr';
 
 
 *{
@@ -34,8 +34,5 @@ body {
   color: var(--text-color);
 }
 
-@import 'bootstrap/scss/bootstrap';
 
 
-/* Importing Bootstrap SCSS file. */
-@import 'bootstrap/scss/bootstrap';
