--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<main>
+<main class="main-content" [class.is-home]="isHomePage">
   <router-outlet></router-outlet>
   
 </main>
