--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,11 @@
   min-height: 100vh;
 }
 
-main {
-  flex: 1;
+.main-content {
+  padding-top: 90px;
+}
+
+
+.main-content.is-home {
+  padding-top: 0;
 }
