--- a/src/app/components/package-card/package-card.component.html
+++ b/src/app/components/package-card/package-card.component.html
@@ -6,7 +6,7 @@
       
   
     </p>
-    <p class="card-text description-text">{{ pacote.description }}</p>
+    <p class="card-text description-text">{{ pacote.description | truncate:100}}</p>
   </div>
   <div class="card-footer bg-transparent border-0 pt-0 pb-3">
     <div class="d-flex justify-content-between align-items-center">
