--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,8 +1,10 @@
 <div class="profile-page-container" *ngIf="user; else loading">
   
   <div class="profile-picture-container">
-    <img [src]="user.imageUrl" alt="Foto de Perfil" class="profile-picture">
-    
+    <img *ngIf="userImage; else defaultAvatar" [src]="userImage" alt="Foto de Perfil" class="profile-picture">
+    <ng-template #defaultAvatar>
+      <img src="assets/images/default-avatar.png" alt="Foto de Perfil Padrão" class="profile-picture">
+    </ng-template>
     <input type="file" #fileInput hidden (change)="onFileSelected($event)" accept="image/png, image/jpeg">
     
     <button class="btn-change-picture" (click)="fileInput.click()">Trocar Foto</button>
@@ -24,7 +26,7 @@
       </div>
       <div class="info-group">
         <label>Data de Nascimento</label>
-        <p>{{ user.birthdate }}</p>
+        <p>{{ user.birthdate | date:'dd/MM/yyyy' }}</p>
       </div>
       <div class="info-group">
         <label>Telefone</label>
@@ -39,8 +41,8 @@
         <input id="name" type="text" formControlName="name" class="form-control">
       </div>
       <div class="form-group">
-        <label for="document">Data de Nascimento</label>
-        <input id="document" type="text" formControlName="document" class="form-control">
+        <label for="birthdate">Data de Nascimento</label>
+        <input id="birthdate" type="date" formControlName="birthdate" class="form-control">
       </div>
       <div class="form-group">
         <label for="phone">Telefone</label>
