--- a/src/app/components/packages-layout/packages-layout.component.html
+++ b/src/app/components/packages-layout/packages-layout.component.html
@@ -8,9 +8,9 @@
 </section>
 
 <section class="container text-center my-5">
-  <h2 class="fw-bold">Pacotes de Viagem</h2>
-  <br>
-  <br>
+  <h2 class="fw-bold">Pacotes de Viagem <i class="bi bi-luggage"></i></h2>
+  
+  
 </section>
 
 
@@ -71,10 +71,7 @@
 
   <div class="row mt-3">
     <div class="col-12 text-center">
-      <button class="btn btn-light fw-bold px-5 py-2 rounded-pill shadow-sm"
-              (click)="onSearch()">
-        Buscar <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16"><path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.414-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/></svg>
-      </button>
+      
     </div>
   </div>
   </div>
