--- a/src/app/pages/forgot-password/forgot-password.component.scss
+++ b/src/app/pages/forgot-password/forgot-password.component.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/variables.scss";
+@use '../../../styles/variables' as *;
 
 .form-section { // Use a classe ou tag do seu contêiner pai
   display: flex;
