--- a/src/app/components/chatbot/chatbot.component.scss
+++ b/src/app/components/chatbot/chatbot.component.scss
@@ -1,4 +1,5 @@
 @use '../../../styles/variables' as *;
+@use 'sass:color'; 
 
 .chatbot-container {
   position: fixed;
@@ -35,7 +36,7 @@
   border-radius: 0.25rem;
   
   &:hover {
-    color: darken($text-white, 10%);
+    color: color.adjust($text-white, $lightness: -10%);
   }
 }
 
