--- a/src/app/components/default-login-layout/default-login-layout.component.scss
+++ b/src/app/components/default-login-layout/default-login-layout.component.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/variables.scss";
+@use "../../../styles/variables.scss";
 
 
 
@@ -17,7 +17,7 @@ main {
     justify-content: flex-start; // para ficar sempre no topo
 
     h1 {
-      color: $primary-color;
+      color: variables.$primary-color;
       font-family: "Boldonse", system-ui;
       margin-bottom: 150px;
     }
@@ -35,7 +35,7 @@ main {
       font-size: 20px;
       font-weight: bold;
       margin-bottom: 45px;
-      color: $primary-color;
+      color: variables.$primary-color;
     }
 
     .btn-wrapper {
@@ -53,14 +53,14 @@ main {
         gap: 20px;
         width: 100%;
         font-size: 14px;
-        color: $gray-bg;
+        color: variables.$gray-bg;
         font-weight: 400;
         text-transform: uppercase;
 
         div {
           flex-grow: 0.3;
           height: 2px;
-          background-color: $gray-bg;
+          background-color: variables.$gray-bg;
         }
       }
 
@@ -79,14 +79,14 @@ main {
         }
 
         &.btn-primary {
-          background-color: $primary-color;
+          background-color: variables.$primary-color;
           color: white;
           box-shadow: 0px 8px 12px rgba(133, 51, 26, 0.932);
         }
 
         &.btn-secondary {
-          border: 1px solid $primary-color;
-          color: $primary-color;
+          border: 1px solid variables.$primary-color;
+          color: variables.$primary-color;
           margin-bottom: 100px;
         }
       }
