--- a/src/app/components/super-chatbot/super-chatbot.component.scss
+++ b/src/app/components/super-chatbot/super-chatbot.component.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/variables.scss';
+@use '../../../styles/variables' as *;
 
 :host {
   display: flex; // Permite que o componente preencha a altura do container pai
