--- a/src/app/pages/booking-finalization/booking-finalization.component.scss
+++ b/src/app/pages/booking-finalization/booking-finalization.component.scss
@@ -1,15 +1,17 @@
+@use 'sass:color';
+
 $orange: #ff7700;
 $white: #ffffff;
 
 .payment-page {
   background: $white;
 
-   .card-img-top {
-  width: 100%;
-  height: 180px;
-  object-fit: cover;
-  border-radius: 12px 12px 0 0;
-    }
+  .card-img-top {
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+    border-radius: 12px 12px 0 0;
+  }
 
   h1 {
     font-weight: bold;
@@ -45,8 +47,9 @@ $white: #ffffff;
     box-shadow: 0 2px 8px #ff770033;
     transition: background 0.2s;
     color: $white;
-    &:hover, &:focus {
-      background: darken($orange, 7%);
+    &:hover,
+    &:focus {
+      background: color.adjust($orange, $lightness: -7%);
       color: $white;
     }
   }
@@ -58,8 +61,10 @@ $white: #ffffff;
     border: 2px solid #ddd;
     background: $white;
     color: #333;
-    &.active, &:hover, &:focus {
-      background: lighten($orange, 40%);
+    &.active,
+    &:hover,
+    &:focus {
+      background: color.adjust($orange, $lightness: 40%);
       border-color: $orange;
       color: $orange;
       box-shadow: 0 0 0 2px #ff770033;
@@ -95,7 +100,8 @@ $white: #ffffff;
     }
   }
 
-  .form-control, .form-select {
+  .form-control,
+  .form-select {
     border-radius: 10px;
     font-size: 1rem;
     padding: 0.7rem 1rem;
@@ -115,14 +121,7 @@ $white: #ffffff;
     color: $orange;
     &:hover {
       text-decoration: underline;
-      color: darken($orange, 7%);
-    }
-
-    .card-img-top {
-  width: 100%;
-  height: 180px;
-  object-fit: cover;
-  border-radius: 12px 12px 0 0;
+      color: color.adjust($orange, $lightness: -7%);
     }
   }
 }
